--- a/flash-card-app/Views/AddCardPage.xaml
+++ b/flash-card-app/Views/AddCardPage.xaml
@@ -3,11 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="flash_card_app.Views.AddCardPage"
              Title="Add Card">
-    <VerticalStackLayout>
-        <Label 
-            Text="Add Card Page"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    <VerticalStackLayout
+        Spacing="10"
+        Margin="10">
+        <Label Text="Question" />
+        <Entry x:Name="entryQuestion"/>
+
+        <Label Text="Answer" />
+        <Entry x:Name="entryAnswer" />
+
+        <Button
+            x:Name="btnAddCard"
+            Text="Enter"
+            Clicked="btnAddCard_Clicked"/>
 
         <Button
             x:Name="btnFlashCard"
