--- a/flash-card-app/Views/AddCardPage.xaml
+++ b/flash-card-app/Views/AddCardPage.xaml
@@ -3,24 +3,40 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="flash_card_app.Views.AddCardPage"
              Title="Add Card">
-    <VerticalStackLayout
-        Spacing="10"
+    <Grid
+        x:Name="addCardGrid"
         Margin="10">
-        <Label Text="Question" />
-        <Entry x:Name="entryQuestion"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <StackLayout
+            Grid.Row="0">
+        <Label Text="Question" 
+               Margin="0, 10, 0, 0"/>
+        <Entry x:Name="entryQuestion"
+               MinimumHeightRequest="70"/>
 
-        <Label Text="Answer" />
-        <Entry x:Name="entryAnswer" />
+        <Label Text="Answer"
+               Margin="0, 2, 0, 0"/>
+        <Entry x:Name="entryAnswer" 
+               MinimumHeightRequest="70"/>
+        
+
 
         <Button
             x:Name="btnAddCard"
-            Text="Enter"
-            Clicked="btnAddCard_Clicked"/>
+            Text="Save Card"
+            Clicked="btnAddCard_Clicked"
+            Margin="0, 5, 0, 0" />
+        </StackLayout>
 
         <Button
-            x:Name="btnFlashCard"
-            Text="Home"
-            Clicked="btnFlashCard_Clicked" />
-        
-    </VerticalStackLayout>
+            x:Name="btnCancel"
+            Text="Cancel"
+            Clicked="btnCancel_Clicked" 
+            Margin="0, 5, 0, 0" 
+            Grid.Row="1"/>
+
+    </Grid>
 </ContentPage>
