--- a/flash-card-app/Views/EditCardsPage.xaml
+++ b/flash-card-app/Views/EditCardsPage.xaml
@@ -3,12 +3,36 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="flash_card_app.Views.EditCardsPage"
              Title="Edit Cards">
-    <VerticalStackLayout
-        Spacing="10"
-        Margin="10">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <StackLayout
+            Grid.Row="0"
+            Padding="10">
+
+            <ListView
+                x:Name="listAddCard"
+                BackgroundColor="Transparent"
+                SeparatorColor="Black"
+                RowHeight="60">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextCell
+                            Text="{Binding Question}"
+                            Detail="{Binding Answer}"/>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            
+        </StackLayout>
+
         <Button
             x:Name="btnFlashCard"
             Text="Home"
-            Clicked="btnFlashCard_Clicked"/>
-    </VerticalStackLayout>
+            Clicked="btnFlashCard_Clicked" 
+            Grid.Row="1"
+            Margin="70, 5, 70, 10"/>
+    </Grid>
 </ContentPage>
