UI, Routing, BaseViewModel

--- a/flash-card-app/AppShell.xaml
+++ b/flash-card-app/AppShell.xaml
@@ -9,7 +9,7 @@
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate views:FlashCardPage}"
-        Route="FlashCardPage" />
+        ContentTemplate="{DataTemplate views:HomePage}"
+        Route="StartPage" />
 
 </Shell>
