--- a/flash-card-app/Views/CreateCollectionPage.xaml
+++ b/flash-card-app/Views/CreateCollectionPage.xaml
@@ -1,34 +1,29 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="flash_card_app.Views.AddCardPage"
-             Title="Add Card">
+             x:Class="flash_card_app.Views.CreateCollectionPage"
+             Title="CreateCollectionPage">
     <Grid
-        x:Name="addCardPageGrid"
+        x:Name="createCollectioPageGrid"
         Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <StackLayout
-            Grid.Row="0">
-        <Label Text="Question" 
+            Grid.Row="0"
+            Padding="10"
+            Spacing="20">
+            <Label Text="Collection Title" 
                Margin="0, 10, 0, 0"/>
-        <Entry x:Name="entryQuestion"
+            <Entry x:Name="Title"
                MinimumHeightRequest="70"/>
 
-            
-        <Label Text="Answer"
-               Margin="0, 2, 0, 0"/>
-        <Entry x:Name="entryAnswer" 
-               MinimumHeightRequest="70"/>
-
-            
-        <Button
-            x:Name="btnAddCard"
-            Text="Save Card"
-            Clicked="btnAddCard_Clicked"
-            Margin="0, 5, 0, 0" />
+            <Button
+                x:Name="btnSaveCollection"
+                Clicked="btnSaveCollection_Clicked"
+                Text="Save Collection"
+                Margin="0, 5, 0, 0" />
         </StackLayout>
 
         <Button
