--- a/flash-card-app/Views/CollectionPage.xaml
+++ b/flash-card-app/Views/CollectionPage.xaml
@@ -2,6 +2,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="flash_card_app.Views.CollectionPage"
+             xmlns:model="clr-namespace:flash_card_app.Models"
+             xmlns:viewmodel="clr-namespace:flash_card_app.ViewModels"
+             x:DataType="viewmodel:CollectionViewModel"
              Title="CollectionPage">
     <Grid
         x:Name="CollectionPageGrid"
@@ -24,31 +27,32 @@
                 Text="Add Collection"/>
             <Button
                 x:Name="btnRefresh"
-                Clicked="btnRefresh_Clicked"
+                Command="{Binding GetCollectionsCommand}"
+                IsEnabled="{Binding IsNotBusy}"
                 Text="Refresh"/>
             <StackLayout
-            Grid.Row="0"
-            Padding="10">
-
+                Grid.Row="0"
+                Padding="10">
                 <ListView
-                x:Name="collectionList"
-                BackgroundColor="Transparent"
-                SeparatorColor="Black"
-                RowHeight="60">
+                    x:Name="collectionList"
+                    ItemsSource="{Binding OCollectionModel}"
+                    SelectionMode="None"
+                    BackgroundColor="Transparent"
+                    SeparatorColor="Black"
+                    RowHeight="60">
                     <ListView.ItemTemplate>
-                        <DataTemplate>
+                        <DataTemplate x:DataType="model:CollectionModel">
                             <TextCell
                             Text="{Binding Name}"/>
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
-
             </StackLayout>
         </StackLayout>
         <Button
             Style="{StaticResource CancelBtn}"
             x:Name="btnCancel"
-            Clicked="btnCancel_Clicked"
+            Command="{Binding GoBackCommand}"
             Grid.Row="1"/>
 
     </Grid>
