--- a/flash-card-app/Views/HomePage.xaml
+++ b/flash-card-app/Views/HomePage.xaml
@@ -2,7 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="flash_card_app.Views.HomePage"
-             Title="StartPage">
+             xmlns:model="clr-namespace:flash_card_app.Models"
+             xmlns:viewmodel="clr-namespace:flash_card_app.ViewModels"
+             x:DataType="viewmodel:HomeViewModel"
+             Shell.NavBarIsVisible="False">
     <Grid
         x:Name="HomePageGrid"
         Margin="10">
@@ -14,25 +17,39 @@
             Grid.Row="0"
             Padding="10"
             Spacing="20"
-            Margin="0, 25, 0, 0">
+            Margin="0, 15, 0, 0">
+            <Frame
+                CornerRadius="38"
+                BorderColor="Black">
+                <Label
+                    Text="Welcome to My Card App"
+                    FontSize="40"
+                    FontFamily="RobotoMono-SemiBold"
+                    HorizontalOptions="Center"/>
+            </Frame>
+            
             <Button
                 x:Name="btnStart"
-                Text="Start"
-                Clicked="btnStart_Clicked" 
+                Text="Card Decks"
+                FontFamily="RobotoMono-Regular"
+                Command="{Binding NavigateToCardDeckPageCommand}"
                 HeightRequest="70"
-                WidthRequest="300"/>
+                WidthRequest="280"
+                Margin="0, 40, 0, 0"/>
             <Button
                 x:Name="btnCollections"
                 Text="Collections"
-                Clicked="btnCollections_Clicked"
+                FontFamily="RobotoMono-Regular"
+                Command="{Binding NavigateToCollectionPageCommand}"
                 HeightRequest="70"
-                WidthRequest="300"/>
+                WidthRequest="280"/>
         </StackLayout>
         <Button
             Grid.Row="1"
             x:Name="btnExit"
             Text="Exit"
-            Clicked="btnExit_Clicked"
+            FontFamily="RobotoMono-Regular"
+            Command="{Binding ExitAppCommand}"
             Margin="70, 5, 70, 10"/>
     </Grid>
 </ContentPage>
