--- a/flash-card-app/Views/CardDeckPage.xaml
+++ b/flash-card-app/Views/CardDeckPage.xaml
@@ -20,23 +20,22 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <StackLayout 
-            Grid.Row="0"
-            Padding="10"
-            Spacing="20"
-            Margin="0, 25, 0, 0">
-            <ListView
-                ItemsSource="{Binding OCardDeckModel}"
-                BackgroundColor="Transparent"
-                SeparatorColor="LightGray"
-                RowHeight="55">
-                <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="model:CardDeckModel">
-                        <TextCell 
-                            Text="{Binding Name}"/>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-        </StackLayout>
+        <CollectionView
+            SelectionMode="None"
+            ItemsSource="{Binding OCardDeckModel}">
+            <CollectionView.ItemTemplate>
+                <DataTemplate 
+                    x:DataType="model:CardDeckModel">
+                    <VerticalStackLayout>
+                        <Frame
+                            HeightRequest="60"
+                            Margin="5">
+                            <Label
+                                Text="{Binding Name}"/>
+                        </Frame>
+                    </VerticalStackLayout>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
     </Grid>
 </ContentPage>
