--- a/flash-card-app/Views/CardsPage.xaml
+++ b/flash-card-app/Views/CardsPage.xaml
@@ -2,10 +2,22 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="flash_card_app.Views.CardsPage"
-             Title="CardsPage">
+             xmlns:model="clr-namespace:flash_card_app.Models"
+             xmlns:viewmodel="clr-namespace:flash_card_app.ViewModels"
+             x:DataType="viewmodel:CardsViewModel"
+             Title="{Binding CardDeck.Name}">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Command="{Binding NavigateToCreateCardPageCommand}">
+            <ToolbarItem.IconImageSource>
+                <FontImageSource
+                FontFamily="MaterialIcons-Regular"
+                Glyph="&#xe145;"/>
+            </ToolbarItem.IconImageSource>
+        </ToolbarItem>
+    </ContentPage.ToolbarItems>
     <VerticalStackLayout>
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="Here the cards of a deck will be listed"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
     </VerticalStackLayout>
