--- a/flash-card-app/Views/CreateDeckPage.xaml
+++ b/flash-card-app/Views/CreateDeckPage.xaml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="flash_card_app.Views.CreateCardDeckPage"
+             x:Class="flash_card_app.Views.CreateDeckPage"
              xmlns:model="clr-namespace:flash_card_app.Models"
              xmlns:viewmodel="clr-namespace:flash_card_app.ViewModels"
-             x:DataType="viewmodel:CreateCardDeckViewModel"
+             x:DataType="viewmodel:CreateDeckViewModel"
              Title="{Binding Title}">
     <Shell.BackButtonBehavior>
         <BackButtonBehavior Command="{Binding GoBackCommand}" />
@@ -13,13 +13,13 @@
         Margin="5">
         <Label 
             FontFamily="RobotoMono-Regular"
-            Text="Enter name of new Card Deck"
+            Text="Enter name of new Deck"
             FontSize="30"  
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
         <Entry
-            x:Name="CardDeckNameEntry"
-            Text="{Binding CardDeckName, Mode=TwoWay}"
+            x:Name="DeckNameEntry"
+            Text="{Binding DeckName, Mode=TwoWay}"
             FontFamily="RobotoMono-Regular"
             VerticalOptions="Center" 
             HorizontalOptions="Center" 
@@ -27,11 +27,11 @@
             WidthRequest="280"
             Margin="0, 25, 0,25"/>
         <Button
-            x:Name="CreateCardDeckButton"
+            x:Name="CreateDeckButton"
             FontFamily="RobotoMono-Regular"
             Text="Save"
             VerticalOptions="Center" 
             HorizontalOptions="Center" 
-            Command="{Binding CreateNewCardDeckCommand}"/>
+            Command="{Binding CreateNewDeckCommand}"/>
     </VerticalStackLayout>
 </ContentPage>
