--- a/flash-card-app/Views/DeckPage.xaml
+++ b/flash-card-app/Views/DeckPage.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="flash_card_app.Views.CardDeckPage"
+             x:Class="flash_card_app.Views.DeckPage"
              xmlns:model="clr-namespace:flash_card_app.Models"
              xmlns:viewmodel="clr-namespace:flash_card_app.ViewModels"
              x:DataType="viewmodel:DeckViewModel"
