WIP Delete Deck

--- a/flash-card-app/Views/CardsPage.xaml
+++ b/flash-card-app/Views/CardsPage.xaml
@@ -16,6 +16,14 @@
                 Glyph="&#xe145;"/>
             </ToolbarItem.IconImageSource>
         </ToolbarItem>
+        <ToolbarItem
+            Command="{Binding DeleteDeckCommand}">
+            <ToolbarItem.IconImageSource>
+                <FontImageSource
+                    FontFamily="MaterialIcons-Regular"
+                    Glyph="&#xe872;"/>
+            </ToolbarItem.IconImageSource>
+        </ToolbarItem>
     </ContentPage.ToolbarItems>
     <CollectionView
         SelectionMode="None"
