--- a/flash-card-app/Views/CardsPage.xaml
+++ b/flash-card-app/Views/CardsPage.xaml
@@ -34,7 +34,8 @@
                 <VerticalStackLayout>
                     <Frame
                         HeightRequest="110"
-                        Margin="5">
+                        Margin="15, 10, 15, 10"
+                        Padding="0">
                         <Frame.GestureRecognizers>
                             <TapGestureRecognizer 
                                 CommandParameter="{Binding .}"
@@ -49,13 +50,16 @@
                             </Grid.RowDefinitions>
                             <Label
                                 Grid.Row="0"
-                                Text="{Binding Title}" />
+                                Text="{Binding Title}" 
+                                VerticalTextAlignment="End"/>
                             <Label
                                 Grid.Row="1"
-                                Text="{Binding Question}" />
+                                Text="{Binding Question}" 
+                                VerticalTextAlignment="Center"/>
                             <Label
                                 Grid.Row="2"
-                                Text="{Binding Answer}" />
+                                Text="{Binding Answer}" 
+                                VerticalTextAlignment="Start"/>
                         </Grid>
                     </Frame>
                 </VerticalStackLayout>
