--- a/flash-card-app/Views/DeckPage.xaml
+++ b/flash-card-app/Views/DeckPage.xaml
@@ -28,15 +28,18 @@
                     x:DataType="model:DeckModel">
                     <VerticalStackLayout>
                         <Frame
-                            HeightRequest="60"
-                            Margin="5">
+                            HeightRequest="70"
+                            Margin="15, 10, 15, 10"
+                            Padding="0">
                             <Frame.GestureRecognizers>
                                 <TapGestureRecognizer
                                     CommandParameter="{Binding .}"
                                     Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:DeckViewModel}}, Path=NavigateToCardsPageCommand}" />
                             </Frame.GestureRecognizers>
                             <Label
-                                Text="{Binding Name}"/>
+                                Text="{Binding Name}"
+                                VerticalTextAlignment="Center"
+                                Padding="0"/>
                         </Frame>
                     </VerticalStackLayout>
                 </DataTemplate>
